--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,7 @@ body > * {
   font-size: 50px;
   display: flex;
   justify-content: center;
+  text-align: center;
   padding: 50px;
   color: whitesmoke;
 }
